--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,6 +1,5 @@
-%h1 Jobs
-
-- @jobs.each do |job|
-  %h2= link_to job.title, job
-
-%p= link_to "New Job", new_job_path
+#jobs
+  - @jobs.each do |job|
+    .job
+      %h2= link_to job.title, job
+      %p= job.description
