--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -1,7 +1,12 @@
-%h1= @job.title
-%p= @job.description
-%p= @job.company
+#jobs
+  .job
+    %h2= @job.title
+    %p= @job.description
+    %p= @job.company
+    %br
+    %button.btn.btn-default= link_to "Apply for Job", @job.url
 
-%p= link_to "Home", jobs_path
-%p= link_to "Edit", edit_job_path
-%p= link_to "Delete", job_path, method: :delete, data: {confirm: "Are you sure?"}
+#links
+  = link_to "Back", jobs_path, class: 'btn btn-default'
+  = link_to "Edit", edit_job_path, class: 'btn btn-default'
+  = link_to "Delete", job_path, method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-default'
