--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,15 @@
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
 %body
+  %nav.navbar.navbar-default
+    .container
+      .navbar-brand Jobs Board
+      %ul.nav.navbar-nav
+        %li= link_to "All Jobs", root_path
+        - Category.all.each do |category|
+          %li= link_to category.name, jobs_path(category: category.name)
+      = link_to "New Job", new_job_path, class: 'navbar-text navbar-right navbar-link'
   .container
+    - flash.each do |name, msg|
+      = content_tag(:div, msg, class: 'alert alert-info')
     = yield
